[package]
name = "ants"
version = "0.1.0"
authors = ["Gilles <gilles.rasigade+github@gmail.com>"]
edition = "2018"

[lib]
name = "ants"
path = "src/lib/mod.rs"

[features]
default = []
parser = ["serde", "serde_json"]

[dependencies]
rand = "0.6"

serde = { version = "1.0.90", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }